--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,12 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "yiisoft/yii2-pceuropa-crm",
+    "description": "Yii2 simple site",
+    "keywords": ["yii2", "framework", "basic", "pceuropa"],
+    "homepage": "https://pceuropa.net/",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "MIT",
     "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
+        "issues": "https://github.com/pceuropa/yii2-pceuropa-crm/issues"
     },
     "minimum-stability": "stable",
     "require": {
@@ -21,13 +17,11 @@
         
         "kartik-v/yii2-widget-select2": "^2.0",
 		"codemix/yii2-localeurls": "dev-master",
-        
         "pceuropa/yii2-language-selection-widget": "dev-master",
         "pceuropa/yii2-ajax-sort": "dev-master",
         "pceuropa/yii2-forms": "2.0.0",
         "pceuropa/yii2-menu": "dev-master",
         "pceuropa/yii2-email": "^1.0",
-
         "lajax/yii2-translate-manager": "^1.7",
         "lajax/yii2-language-picker": "1.*",
         "bizley/migration": "^2.2"
